fixing the menu overlap

--- a/src/components/hamburger.scss
+++ b/src/components/hamburger.scss
@@ -83,8 +83,14 @@
 }
 
 @media only screen and (max-width: 768px) {
-  .nav-list.open .nav-item{
-    font-size: 3.5vw !important;
-    padding: 0vw 4vw 4vw 0vw !important;
+  .burger{
+    top: 87vh !important;
+    .nav-list.open{
+      top: 89vh !important;
+      .nav-item{
+        font-size: 3.5vw !important;
+        padding: 0vw 4vw 4vw 0vw !important;
+      }
+    }
   }
 }
